<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 Android Shuffle Open Source Project Licensed under 
	the Apache License, Version 2.0 (the "License"); you may not use this file 
	except in compliance with the License. You may obtain a copy of the License 
	at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable 
	law or agreed to in writing, software distributed under the License is distributed 
	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
	express or implied. See the License for the specific language governing permissions 
	and limitations under the License. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
            android:id="@+id/enable_sync_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBaseline="@+id/enable_sync"
            android:paddingLeft="24dp"
            android:text="@string/enable_sync_button_title"
            style="@style/LabelTextViewStyle"
            />

    <ToggleButton
            android:id="@+id/enable_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="12dp"
            android:onClick="onToggleSyncClicked"
            style="?android:attr/textAppearanceMedium"

            />

    <Button
            android:id="@+id/select_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enable_sync"
            android:layout_centerHorizontal="true"
            android:text="@string/select_account_button_title"
            android:visibility="invisible"
            android:onClick="onSelectAccountClicked"
            />

    <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/enable_sync"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:onClick="onLogoutClicked"
            android:text="@string/logout_button_title"
            />

    <TextView
            android:id="@+id/logged_in_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignBaseline="@+id/logout"
            android:text="@string/sync_selected_account"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:layout_toLeftOf="@+id/logout"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/label_color"
            />

    <Button
            android:id="@+id/sync_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_menu_refresh_holo_light"
            android:drawablePadding="8dp"
            android:text="@string/sync_now_button_title"
            />

    <TextView
            android:id="@+id/last_sync_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sync_now"
            android:text="@string/last_sync_title"
            android:paddingLeft="12dp"
            android:paddingTop="12dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />


</RelativeLayout>
